[package]
name = "carya_accel"
version = "0.1.0"
authors = ["chrism <christopher.and.moran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "carya_accel"

[dependencies]
accel = "0.3.1"
ndarray = "0.13"

[dev-dependencies]
ndarray-rand = "0.11"
serial_test = "0.4"